package com.github.sneakytowelsuit.purerules.context.field;

public record FieldContextKey<TInputId>(TInputId inputId, String fieldName) {}
